13.08.16 - changing analyser maclab